syntax = "proto3";

package go.micro.srv.GetHouses;

service GetHouses {
    rpc Call (Request) returns (Response) {
    }
}

message Message {
    string say = 1;
}

message Request {
    string AreaId = 1;
    string Start = 2;
    string End = 3;
    string SearchKind = 4;
    string Page = 5;
}

message Response {
    string Errno = 1;
    string Errmsg = 2;
    int64 CurrentPage = 3;
    bytes Houses = 4;
    int64 TotalPage = 5;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
